<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008000"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="#f6f9f7"
        android:padding="30dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/tittle"
                android:textSize="14dp"
                android:gravity="center"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/text1"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/text"
                android:textColor="#000000"
                android:textSize="14dp"
                android:textStyle="italic" />
            <Button
                android:id="@+id/identify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="#818685"
                android:text="@string/button"
                android:drawableRight="@drawable/ic_arrow_forward_white_24dp"
                android:textColor="#ffffff"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/identify"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="Check the Guide on how it works?"
                android:textSize="15dp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_launcher" />
</RelativeLayout>