<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:background="@color/main_color_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/title"
                    android:autoLink="all"
                    android:layout_span="3"
                    android:padding="15dip"
                    android:textColor="#000"/>
            </TableRow>
        </android.support.v7.widget.CardView>
        <View
            android:layout_height="2dip"
            android:background="#d7589f06"/>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">


            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/general_info"
                    android:autoLink="all"
                    android:layout_span="3"
                    android:padding="15dip"
                    android:textColor="#000"/>
            </TableRow>
        </android.support.v7.widget.CardView>
        <!-- developers -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/vegetation"
                    android:layout_span="3"
                    android:padding="15dip"
                    android:textColor="#000"/>
            </TableRow>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/developers"
                    android:autoLink="all"
                    android:layout_span="3"
                    android:padding="15dip"
                    android:textColor="#000"/>
            </TableRow>
        </android.support.v7.widget.CardView>
        <View
            android:layout_height="2dip"
            android:background="#d7589f06"/>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardElevation="1dp"
            card_view:cardCornerRadius="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/tableLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dip"
                    android:shrinkColumns="1"
                    android:stretchColumns="*"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:orientation="vertical">

                    <TableRow
                        android:id="@+id/tableRow10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:text="Website:"
                            android:id="@+id/link"
                            android:padding="5dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content">
                        </TextView>
                        <TextView
                            android:id="@+id/url"
                            android:padding="5dp"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:autoLink="web">
                        </TextView>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </TableLayout>
</android.support.v4.widget.NestedScrollView>